# scissors_paper_rock_well

./: .dockerignore  Dockerfile  LICENSE  README.md  pyproject.toml
scissors_paper_rock_well/: api.py  core.py  models.py
tests/: test_api.py  test_core.py  test_models.py
