[tool.poetry]
name = "scissors_paper_rock_well"
version = "0.1.0"
description = "A version of the game scissor-paper-rock, but including a new word \"well\"."
authors = ["npujol <naivy.luna@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^1.8"
pytest = "^6.2.2"
hypothesis = "^6.3.3"
fastapi = "^0.63.0"
uvicorn = "^0.13.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
